# audio_event_counter

./: README.md  audio_counter_app.py  pyproject.toml  requirements.txt
src/: audio_counter_app.py
